--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -14,23 +14,35 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center_vertical"
-            android:background="@color/colorPrimary">
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/display_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_vertical"
+                android:background="@color/colorPrimary">
 
             <TextView
-                android:id="@+id/formulaTextView"
-                style="@style/FormulaTextViewStyle" />
+                    android:id="@+id/formulaTextView"
+                    style="@style/FormulaTextViewStyle" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintBottom_toTopOf="@+id/resultTextView"
+                    app:layout_constraintVertical_chainStyle="packed"/>
 
             <TextView
-                android:id="@+id/resultTextView"
-                style="@style/ResultTextViewStyle" />
+                    android:id="@+id/resultTextView"
+                    style="@style/ResultTextViewStyle"
+                    app:layout_constraintTop_toBottomOf="@+id/formulaTextView" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
 
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
