--- a/app/src/main/res/menu/navigation_drawable_menu.xml
+++ b/app/src/main/res/menu/navigation_drawable_menu.xml
@@ -2,35 +2,29 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <group
+        android:id="@+id/theme_group"
+        android:title="Тема"
+        android:checkableBehavior="single">
+            <item
+                android:id="@+id/theme_dark"
+                android:title="Темная" />
+            <item
+                android:id="@+id/theme_light"
+                android:title="Светлая" />
+            <item
+                android:id="@+id/theme_blue"
+                android:title="Голубая" />
+            <item
+                android:id="@+id/theme_gold"
+                android:title="Золотая" />
+    </group>
+
     <item
         android:id="@+id/menu_vibration_switch"
         android:icon="@drawable/menu_vibration_icon"
         android:title="@string/vibration"
         app:actionLayout="@layout/menu_theme_switch" />
-
-    <group
-            android:id="@+id/menu_theme_selector"
-            android:checkableBehavior="single">
-
-        <item
-                android:id="@+id/menu_theme_dark"
-                android:icon="@drawable/menu_theme_icon"
-                android:checked="true"
-                android:onClick=""
-                android:title="@string/theme_dark"/>
-
-        <item
-                android:id="@+id/menu_theme_light"
-                android:icon="@drawable/menu_theme_icon"
-                android:title="@string/theme_light"/>
-
-        <item
-                android:id="@+id/menu_theme_gold"
-                android:icon="@drawable/menu_theme_icon"
-                android:title="@string/theme_gold"/>
-
-    </group>
-
 
     <item
             android:id="@+id/menu_share_link"
